--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 quarkus.hibernate-orm.database.generation=drop-and-create
 
-quarkus.hibernate-orm.scripts.generation=create
-quarkus.hibernate-orm.scripts.generation.create-target=schema.sql
+#quarkus.hibernate-orm.scripts.generation=create
+#quarkus.hibernate-orm.scripts.generation.create-target=schema.sql
